<resources>
    <string name="app_name">VitalPaint</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />


    <string name="text_im_hit">Fui Atingido!</string>
    <string name="text_log">Show Log</string>
    <string name="text_leave_game">Leave Game</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="email">Email</string>
    <string name="minimum_password">Password muito curta! Introduza no minimo 6 carateres.</string>
    <string name="auth_failed">Autenticação falhou. Verifique o seu email e password</string>
    <string name="change_email">Mudar Email</string>
    <string name="change_password">Mudar Password</string>
    <string name="send_password_reset_email">Mandar email de reset de password</string>
    <string name="new_pass">Nova Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Não tem conta? Registe-se aqui no VitalPaint!</string>
    <string name="btn_link_to_login">Já me Registei. Fazer login</string>
    <string name="btn_forgot_password">Esqueceu-se da sua password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Novo Email</string>
    <string name="btn_change">Mudar</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Terminar Sessão</string>
    <string name="lbl_forgot_password">Esqueceu-se da Password?</string>
    <string name="forgot_password_msg">Precisamos do seu email de registo para que possamos enviar-te as intruções de reset de password</string>
    <string name="vitalpaint_logo">VitalPaint Logo</string>
    <string name="create_game">Criar Lobby</string>
    <string name="join_game">Juntar a Lobby</string>
    <string name="play">Jogar</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_logout">Terminar Sessão</string>
    <string name="nav_account_settings">Definições de Conta</string>
    <string name="team_number">Número de jogadores</string>
    <string name="blue_team_join">Juntar á equipa azul</string>
    <string name="blue_team_name">Equipa Azul</string>
    <string name="red_team_name">Equipa Vermelha</string>
    <string name="red_team_join">Juntar á equipa vermelha</string>
    <string name="nome">Nome</string>
    <string name="username">Defina um nome de usuário</string>
    <string name="startDateText">Indique a data de início do jogo</string>
    <string name="endDateText">Indique a data de fim do jogo</string>

    <string name="durationText">Duração do Jogo (em minutos)</string>

    <string name="invalidDateWarningDetail">As datas introduzidas não sao válidas. Não pode criar jogos em datas passadas, e a data de inicio tem que ser antes da data de fim.</string>

    <string name="invalidDateWarning">Datas inválidas</string>

    <string name="select_game_mode">Selecione o modo de jogo</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_sign_in_short">Sign In</string>
    <string name="game_name">Nome do Jogo</string>
    <string name="btn_create_game">Criar Lobby!</string>
    <string name="games">Jogos</string>
    <string name="friends">Amigos</string>
    <string name="nav_spectate">Assistir a Jogo</string>
    <string name="join_team">Juntar-me</string>
    <string name="invite_friends">Convidar Amigos</string>
    <string name="begin">Início</string>

    <string name="duration">Duração</string>

    <string name="exit_team_btn">Sair da equipa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_starts_in">O jogo começa em:</string>
    <string name="game_radio_txt">Raio do jogo:</string>
    <string name="end_match">Fim da partida!</string>
    <string name="blueTeam">Equipa Azul</string>
    <string name="redTeam">Equipa Vermelha</string>
    <string name="prefered_game_radius">game_radius</string>
    <string name="agree">Sim</string>
    <string name="disagree">Não</string>
    <string name="confirm_death">Confirmas a tua morte?</string>
    <string name="confirm_leave_game">Tens a certeza que queres sair?</string>


</resources>
