<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_play" android:title="@string/play">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_create_game"
                        android:title="@string/create_game"
                        android:icon="@drawable/ic_plus_circle"/>
                    <item
                        android:id="@+id/nav_join_game"
                        android:title="@string/join_game"
                        android:icon="@drawable/ic_account_multiple_plus"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_spectate"
            android:icon="@drawable/ic_eye_outline"
            android:title="@string/nav_spectate" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_account_multiple"
            android:title="@string/friends"/>
        <item
            android:id="@+id/nav_game_history"
            android:icon="@drawable/ic_format_list_bulleted"
            android:title="@string/games"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_settings_variant"
            android:title="@string/nav_account_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_leave_game"
            android:title="@string/nav_logout" />
    </group>
</menu>
