<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <EditText
            android:id="@+id/game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_name"
            android:maxLines="1"/>

        <Spinner
            android:id="@+id/game_mode_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#d11f08"
            android:entries="@array/game_modes"
            android:padding="5dp" />

        <TextView
            android:id="@+id/start_time_txt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:text="@string/startDateText" />
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <DatePicker
                android:id="@+id/start_date"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="1" />

            <TimePicker
                android:id="@+id/start_time"
                android:layout_width="201dp"
                android:layout_height="186dp"
                android:layout_gravity="right"
                android:scaleX="1"
                android:timePickerMode="spinner" />

        </LinearLayout>
        <TextView
            android:id="@+id/end_time_txt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:text="@string/endDateText" />
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <DatePicker
                android:id="@+id/end_date"
                android:layout_width="163dp"
                android:layout_height="188dp"
                android:layout_gravity="left"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="0.7" />

            <TimePicker
                android:id="@+id/end_time"
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:scaleX="0.7"
                android:timePickerMode="spinner" />

        </LinearLayout>

        <Button
            android:id="@+id/create_game"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_create_game"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>